CollectionUtil.last(): add optimization for LinkedList